# TaoBaoGoods

./: .gitignore  AGENTS.md  IFLOW.md  README.MD  main.py  pyproject.toml  requirements.txt  start.bat  start.ps1
.github/workflows/: build-nightly.yml  build-per-push.yml  build-release.yml  python-package-conda.yml  python-publish.yml
C_Version/: DefaultConfig.txt  README.md  TaoBaoAutoBuyer.sln  TaoBaoGoods.sln  TaoBaoGoods.vcxproj  browser.c  browser.h  build.bat  config.c  config.h  main.c  ui.c  ui.h
C_Version/scripts/: build.bat
C_Version/src/: browser.c  browser.h  config.c  config.h  main.c  ui.c  ui.h
docs/: README.md
python_Version/: DefaultConfig.yaml  config.yaml  init.bat  init.ps1  main.py  requirements.txt  setup.cfg  start.bat  start.ps1  start.ps1.error
python_Version/config/: default.yaml
python_Version/scripts/: init.ps1  start.ps1
python_Version/src/taobaogoods/: __init__.py  cli.py  status.py
python_Version/tests/: test_app.py
scripts/: start.ps1
src/: __init__.py  app.py  browser_session.py  cli.py  gui.py  interactive.py  paths.py  stealth.py
src/taobaogoods/: browser_session.py  config.py  ui.py
tests/: test_app.py  test_config.py  test_paths.py
